@@ -29,8 +29,7 @@ void
 TAO::In_UB_String_Argument_T<S_var,Insert_Policy>::interceptor_value (
     CORBA::Any *any) const
 {
-  typedef typename S_var::s_traits::from_type from_type;
-  Insert_Policy<from_type>::any_insert (any, this->x_);
+  Insert_Policy<S_var>::any_insert (any, this->x_);
 }
 
 #endif /* TAO_HAS_INTERCEPTORS */
@@ -139,8 +138,7 @@ void
 TAO::Ret_UB_String_Argument_T<S_var,Insert_Policy>::interceptor_value (
   CORBA::Any *any) const
 {
-  typedef typename S_var::s_traits::from_type from_type;
-  Insert_Policy<from_type>::any_insert (any, this->x_.in ());
+  Insert_Policy<typename S_var::s_traits::char_type const *>::any_insert (any, this->x_.in ());
 }
 
 #endif /* TAO_HAS_INTERCEPTORS */
